--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "numpy>=1.21.0",
     "ta>=0.10.0",
     "aiohttp>=3.8.0",
-    "python-dotenv>=0.19.0"
+    "python-dotenv>=0.19.0",
+    "reqeusts"
 ]
 
 [project.optional-dependencies]
@@ -27,7 +28,7 @@ dev = [
 ]
 
 [build-system]
-requires = ["setuptools>=45", "wheel", "setuptools-scm"]
+requires = ["setuptools>=45", "wheel", "setuptools-scm", "requests"]
 build-backend = "setuptools.build_meta"
 
 [tool.black]
