--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Your Name", email = "your.email@example.com"}
 ]
 readme = "README.md"
-license = {text = "MIT"}
+license = "MIT"
 requires-python = ">=3.8"
 dependencies = [
     "gate-api>=4.23.0",
@@ -16,7 +16,7 @@ dependencies = [
     "ta>=0.10.0",
     "aiohttp>=3.8.0",
     "python-dotenv>=0.19.0",
-    "reqeusts"
+    "requests>=2.32.4",
 ]
 
 [project.optional-dependencies]
@@ -28,8 +28,16 @@ dev = [
 ]
 
 [build-system]
-requires = ["setuptools>=45", "wheel", "setuptools-scm", "requests"]
+requires = ["setuptools>=45", "wheel", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+py-modules = [
+    "crypto_monitor",
+    "technical_analysis", 
+    "update_config",
+    "watchlist"
+]
 
 [tool.black]
 line-length = 100
