--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "aiohttp>=3.8.0",
     "python-dotenv>=0.19.0",
     "requests>=2.32.4",
+    "pytz>=2021.1",
 ]
 
 [project.optional-dependencies]
